Added dummy images to the header.

--- a/index.html
+++ b/index.html
@@ -8,21 +8,57 @@
 </head>
 <body>
     <main>
-        <nav id="sidebar-nav">
-            <div id="img-container"><img src="" alt=""></div>
-            <div id="sub-navs">
-            </div>
+        <nav id="sidebar">
+            <div id="img-container"><img src="media/logo-img.png" alt=""></div>
+            <ul id="sub-navs">
+                <img class="nav-img" src="media/home-icon.png" alt="">
+                <li class="nav-item">Home</li>
+                <img class="nav-img" src="media/profile-icon.png" alt="">
+                <li class="nav-item">Profile</li>
+                <img class="nav-img" src="media/envelope-icon.png" alt=""> 
+                <li class="nav-item">Messages</li>
+                <img class="nav-img" src="media/history-icon.png" alt=""> 
+                <li class="nav-item">History</li>
+                <img class="nav-img" src="media/tasks-icon.png" alt=""> 
+                <li class="nav-item">Tasks</li>
+                <img class="nav-img" src="media/communities-icon.png" alt=""> 
+                <li class="nav-item">Groups</li>
+            </ul>
 
-            <div id="settings-nav">
-            </div>
+            <ul id="settings-nav">
+                <img class="nav-img" src="media/settings-icon.png" alt=""> 
+                <li class="nav-item">Settings</li>
+                <img class="nav-img" src="media/support-icon.png" alt=""> 
+                <li class="nav-item">Support</li>
+                <img class="nav-img" src="media/privacy-icon.png" alt=""> 
+                <li class="nav-item">Privacy</li>
+            </ul>
         </nav>
 
         <div id="header">
-            <div id="search"></div>
-            <div id="user-icon"></div>
+            <div id="search"> 
+                <img id="search-icon" src="media/search-icon.png" alt="">
+                <input type="text" name="search" id="search-bar">
+            </div>
+            <div id="user-profile">
+                <img id="bell-icon" src="media/bell-icon.png" alt="">
+                <img id="user-admin-img" src="media/admin-user.png" alt="">
+                <h3>Jack Sebben</h3>
+            </div>
 
-            <div id="user-icon-greet"></div>
-            <div id="actions"></div>
+            <div id="user-greet">
+                <img id="greet-admin-img" src="media/admin-user.png" alt="">
+                <div id="greeting-msg">
+                    <p>Howdy,</p>
+                    <br>
+                    <h2>Jack Sebben (@jackouni)</h2>
+                </div>
+            </div>
+            <div id="actions">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>    
+            </div>
         </div>
 
         <div id="content-container">
