Dummy texts and images filling in all elements and containers. Now to add responsiveness to the elements.

--- a/index.html
+++ b/index.html
@@ -95,10 +95,42 @@
                 </div>
             </div>
             <div id="announcements">
-
+                <div class="announcement-post">
+                    <h4>Silent Auction Winner</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nam?</p>
+                </div>
+                <hr>
+                <div class="announcement-post">
+                    <h4>Pajama Day</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nam?</p>
+                </div>
+                <hr>
+                <div class="announcement-post">
+                    <h4>Pizza Party</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nam?</p>
+                </div>
             </div>
             <div id="trending">
-
+                <div class="trend">
+                    <img src="media/user-1-img.png" alt="" class="trending-img">
+                    <h4>@wubbalubbadubdub</h4>
+                    <p>Smartest Man in The Universe</p>
+                </div>
+                <div class="trend">
+                    <img src="media/user-2-img.png" alt="" class="trending-img">
+                    <h4>@sadboyhours</h4>
+                    <p>Meme lord</p>
+                </div>
+                <div class="trend">
+                    <img src="media/user-3-img.png" alt="" class="trending-img">
+                    <h4>@pgangstarrr</h4>
+                    <p>Plays the mayo</p>
+                </div>
+                <div class="trend">
+                    <img src="media/user-img-4.png" alt="" class="trending-img">
+                    <h4>@bootman</h4>
+                    <p>I like boots</p>
+                </div>
             </div>
         </div>
     </main>
