Site is responsive to my liking. Media query allows for the screen to adapt at smaller sizes in width. Added titles to all the sections making it more pleasing to navigate and use for users. Box shadows added for styling and cleaner UI.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="user-profile">
                 <img id="bell-icon" src="media/bell-icon.png" alt="">
                 <img id="user-admin-img" src="media/admin-user.png" alt="">
-                <h3>Jack Sebben</h3>
+                <h3 id="user-name">Jack Sebben</h3>
             </div>
 
             <div id="user-greet">
@@ -61,75 +61,85 @@
             </div>
         </div>
 
+
         <div id="content-container">
-            <div id="projects">
-                <div class="project-card">
-                    <h4>Title</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                    <div class="view-icons"></div>
-                </div>
-                <div class="project-card">
-                    <h4>Title</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                    <div class="view-icons"></div>
-                </div>
-                <div class="project-card">
-                    <h4>Title</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                    <div class="view-icons"></div>
-                </div>
-                <div class="project-card">
-                    <h4>Title</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                    <div class="view-icons"></div>
-                </div>
-                <div class="project-card">
-                    <h4>Title</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                    <div class="view-icons"></div>
-                </div>
-                <div class="project-card">
-                    <h4>Title</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                    <div class="view-icons"></div>
-                </div>
-            </div>
-            <div id="announcements">
-                <div class="announcement-post">
-                    <h4>Silent Auction Winner</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nam?</p>
-                </div>
-                <hr>
-                <div class="announcement-post">
-                    <h4>Pajama Day</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nam?</p>
-                </div>
-                <hr>
-                <div class="announcement-post">
-                    <h4>Pizza Party</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nam?</p>
+            <div id="project-section">
+                <h3 id="project-title">Your Projects</h3>
+                <div id="projects">
+                    <div class="project-card">
+                        <h4>Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
+                        <div class="view-icons"></div>
+                    </div>
+                    <div class="project-card">
+                        <h4>Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
+                        <div class="view-icons"></div>
+                    </div>
+                    <div class="project-card">
+                        <h4>Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
+                        <div class="view-icons"></div>
+                    </div>
+                    <div class="project-card">
+                        <h4>Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
+                        <div class="view-icons"></div>
+                    </div>
+                    <div class="project-card">
+                        <h4>Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
+                        <div class="view-icons"></div>
+                    </div>
+                    <div class="project-card">
+                        <h4>Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
+                        <div class="view-icons"></div>
+                    </div>
                 </div>
             </div>
-            <div id="trending">
-                <div class="trend">
-                    <img src="media/user-1-img.png" alt="" class="trending-img">
-                    <h4>@wubbalubbadubdub</h4>
-                    <p>Smartest Man in The Universe</p>
+            <div id="announcement-section">
+                <h3 id="project-title">News</h3>
+                <div id="announcements">
+                    <div class="announcement-post">
+                        <h4>Auction!</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nam?</p>
+                    </div>
+                    <hr>
+                    <div class="announcement-post">
+                        <h4>Pajama Day</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nam?</p>
+                    </div>
+                    <hr>
+                    <div class="announcement-post">
+                        <h4>Pizza Party</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nam?</p>
+                    </div>
                 </div>
-                <div class="trend">
-                    <img src="media/user-2-img.png" alt="" class="trending-img">
-                    <h4>@sadboyhours</h4>
-                    <p>Meme lord</p>
-                </div>
-                <div class="trend">
-                    <img src="media/user-3-img.png" alt="" class="trending-img">
-                    <h4>@pgangstarrr</h4>
-                    <p>Plays the mayo</p>
-                </div>
-                <div class="trend">
-                    <img src="media/user-img-4.png" alt="" class="trending-img">
-                    <h4>@bootman</h4>
-                    <p>I like boots</p>
+            </div>
+            <div id="trending-section">
+                <h3 id="project-title">Trending</h3>
+                <div id="trending">
+                    <div class="trend">
+                        <img src="media/user-1-img.png" alt="" class="trending-img">
+                        <h4>@ricksanchez</h4>
+                        <p>Smartest man in the universe</p>
+                    </div>
+                    <div class="trend">
+                        <img src="media/user-2-img.png" alt="" class="trending-img">
+                        <h4>@sadboyhours</h4>
+                        <p>Meme lord</p>
+                    </div>
+                    <div class="trend">
+                        <img src="media/user-3-img.png" alt="" class="trending-img">
+                        <h4>@gangstarrr</h4>
+                        <p>Plays the mayo</p>
+                    </div>
+                    <div class="trend">
+                        <img src="media/user-img-4.png" alt="" class="trending-img">
+                        <h4>@bootman</h4>
+                        <p>I like boots</p>
+                    </div>
                 </div>
             </div>
         </div>
