Removed all the old png images I was using and replaced them with svg files that matched in style more closely.

--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
         <nav id="sidebar">
             <div id="img-container"><img src="media/logo-img.png" alt=""></div>
             <ul id="sub-navs">
-                <img class="nav-img" src="media/home-icon.png" alt="">
+                <img class="nav-img" src="media/home-icon.svg" alt="">
                 <li class="nav-item">Home</li>
-                <img class="nav-img" src="media/profile-icon.png" alt="">
+                <img class="nav-img" src="media/profile-icon.svg" alt="">
                 <li class="nav-item">Profile</li>
-                <img class="nav-img" src="media/envelope-icon.png" alt=""> 
+                <img class="nav-img" src="media/messages-icon.svg" alt=""> 
                 <li class="nav-item">Messages</li>
-                <img class="nav-img" src="media/history-icon.png" alt=""> 
+                <img class="nav-img" src="media/history-icon.svg" alt=""> 
                 <li class="nav-item">History</li>
-                <img class="nav-img" src="media/tasks-icon.png" alt=""> 
+                <img class="nav-img" src="media/tasks-icon.svg" alt=""> 
                 <li class="nav-item">Tasks</li>
-                <img class="nav-img" src="media/communities-icon.png" alt=""> 
+                <img class="nav-img" src="media/communities-icon.svg" alt=""> 
                 <li class="nav-item">Groups</li>
             </ul>
 
             <ul id="settings-nav">
-                <img class="nav-img" src="media/settings-icon.png" alt=""> 
+                <img class="nav-img" src="media/settings-icon.svg" alt=""> 
                 <li class="nav-item">Settings</li>
-                <img class="nav-img" src="media/support-icon.png" alt=""> 
+                <img class="nav-img" src="media/support-icon.svg" alt=""> 
                 <li class="nav-item">Support</li>
-                <img class="nav-img" src="media/privacy-icon.png" alt=""> 
+                <img class="nav-img" src="media/privacy-icon.svg" alt=""> 
                 <li class="nav-item">Privacy</li>
             </ul>
         </nav>
