Made some media queries to make the screen more responsive at smaller sizes. Some slight adjustments to make widths and heights more responsive.
Added hover effects to the buttons and icons.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
                 <li class="nav-item">Tasks</li>
                 <img class="nav-img" src="media/communities-icon.svg" alt=""> 
                 <li class="nav-item">Groups</li>
-            </ul>
-
-            <ul id="settings-nav">
-                <img class="nav-img" src="media/settings-icon.svg" alt=""> 
+                <img class="nav-img setting-start" src="media/settings-icon.svg" alt=""> 
                 <li class="nav-item">Settings</li>
                 <img class="nav-img" src="media/support-icon.svg" alt=""> 
                 <li class="nav-item">Support</li>
@@ -67,34 +64,58 @@
                 <h3 id="project-title">Your Projects</h3>
                 <div id="projects">
                     <div class="project-card">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                        <div class="view-icons"></div>
+                        <h4>Barbequed</h4>
+                        <p>I could really go for a barbeque right now. Something about smoked meats that really fulfill me ...</p>
+                        <div class="view-icons">
+                            <img src="media/view-icon.svg" alt="">
+                            <img src="media/share-icon.svg" alt="">
+                            <img src="media/favorite-icon.svg" alt="">
+                        </div>
                     </div>
                     <div class="project-card">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                        <div class="view-icons"></div>
+                        <h4>Unicycling</h4>
+                        <p>Fun fact: I'm a professional extreme unicyclsit now looking to get into web dev ...</p>
+                        <div class="view-icons">
+                            <img src="media/view-icon.svg" alt="">
+                            <img src="media/share-icon.svg" alt="">
+                            <img src="media/favorite-icon.svg" alt="">
+                        </div>
                     </div>
                     <div class="project-card">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                        <div class="view-icons"></div>
+                        <h4>The Odin Project</h4>
+                        <p>This dashboard project is from The Odin Project, and so far it's been really fun and beneficial ...</p>
+                        <div class="view-icons">
+                            <img src="media/view-icon.svg" alt="">
+                            <img src="media/share-icon.svg" alt="">
+                            <img src="media/favorite-icon.svg" alt="">
+                        </div>
                     </div>
                     <div class="project-card">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                        <div class="view-icons"></div>
+                        <h4>Gym Exercises</h4>
+                        <p>Workout, workout, workout, rest, pre-workout shake, stretch, workout ...</p>
+                        <div class="view-icons">
+                            <img src="media/view-icon.svg" alt="">
+                            <img src="media/share-icon.svg" alt="">
+                            <img src="media/favorite-icon.svg" alt="">
+                        </div>
                     </div>
                     <div class="project-card">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                        <div class="view-icons"></div>
+                        <h4>Side Hustle</h4>
+                        <p>Started an eccommerce selling dropshipped albino alpaca ponchos. Lots of $$$ to be made here! ...</p>
+                        <div class="view-icons">
+                            <img src="media/view-icon.svg" alt="">
+                            <img src="media/share-icon.svg" alt="">
+                            <img src="media/favorite-icon.svg" alt="">
+                        </div>
                     </div>
                     <div class="project-card">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, aliquclass.</p>
-                        <div class="view-icons"></div>
+                        <h4>Philosophy</h4>
+                        <p>If I do a good job and stay focused long enough, things will work (I hope)...</p>
+                        <div class="view-icons">
+                            <img src="media/view-icon.svg" alt="">
+                            <img src="media/share-icon.svg" alt="">
+                            <img src="media/favorite-icon.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
